--- a/packages/jsx/tsconfig.json
+++ b/packages/jsx/tsconfig.json
@@ -6,6 +6,14 @@
     "noPropertyAccessFromIndexSignature": true,
     "noFallthroughCasesInSwitch": false
   },
-  "include": ["src", "types.d.ts"],
-  "exclude": ["build", "babel.config.js", "metro.config.js", "jest.config.js"]
+  "include": [
+    "src",
+    "types.d.ts"
+  ],
+  "exclude": [
+    "build",
+    "babel.config.js",
+    "metro.config.js",
+    "jest.config.js"
+  ]
 }
