--- a/packages/babel/.eslintrc.json
+++ b/packages/babel/.eslintrc.json
@@ -12,10 +12,13 @@
         "plugin:@nx/typescript"
       ],
       "rules": {
+        "prefer-const": "off",
+        "@typescript-eslint/no-non-null-assertion": "off",
         "require-yield": "off",
         "no-useless-escape": "off",
         "@typescript-eslint/no-explicit-any": "off",
-        "@typescript-eslint/no-empty-function": "off"
+        "@typescript-eslint/no-empty-function": "off",
+        "@typescript-eslint/no-unused-vars": "off"
       }
     }
   ]
