--- a/packages/babel/tsconfig.json
+++ b/packages/babel/tsconfig.json
@@ -7,5 +7,5 @@
     "strict": true
   },
   "include": ["src", "test", "./*.d.ts"],
-  "exclude": ["build", "babel.config.js", "metro.config.js", "jest.config.js"]
+  "exclude": ["build", "babel.config.js", "bck", "metro.config.js", "jest.config.js"]
 }
