--- a/packages/language-service/tsconfig.build.json
+++ b/packages/language-service/tsconfig.build.json
@@ -6,5 +6,5 @@
     "noEmit": false,
     "noEmitOnError": false
   },
-  "exclude": ["./tests/", "./src/bck"]
+  "exclude": ["./tests/", "build"]
 }
