--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "build": "turbo run build",
     "build:release": "yarn build && yarn libs:foreach pack && yarn libs:foreach exec \"mkdir _release && tar zxvf package.tgz --directory _release && rm package.tgz\"",
-    "build:watch": "turbo run build:watch",
+    "build:watch": "turbo run build:watch --concurrency 13",
     "clean": "rimraf -g packages/*/build",
     "docs:build": "turbo run docs:build",
     "example:expo": "yarn workspace expo-app run start",
@@ -64,7 +64,7 @@
     "ts-node": "^10.9.2",
     "tslib": "^2.6.3",
     "turbo": "^2.0.6",
-    "typescript": "~5.3.3"
+    "typescript": "^5.5.3"
   },
   "packageManager": "yarn@4.2.2",
   "overrides": {
