--- a/packages/metro/.eslintrc.json
+++ b/packages/metro/.eslintrc.json
@@ -12,10 +12,12 @@
         "plugin:@nx/typescript"
       ],
       "rules": {
+        "@typescript-eslint/no-unused-vars": "off",
         "@typescript-eslint/no-explicit-any": "off",
         "@typescript-eslint/no-var-requires": "off",
         "@typescript-eslint/no-empty-interface": "off",
         "@typescript-eslint/no-non-null-assertion": "off",
+        "@typescript-eslint/ban-ts-comment": "off",
         "no-empty": "off"
       }
     }
