--- a/packages/metro/package.json
+++ b/packages/metro/package.json
@@ -18,6 +18,7 @@
   "types": "build/index.d.ts",
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
+    "build:watch": "tsc -p tsconfig.build.json -w",
     "clean": "rm -rf build",
     "cloc": "yarn run build && npx cloc --by-file --exclude-ext=d.ts ./build/runtime/native ./build/runtime/api.native.js ./build/runtime/observable.js ./build/runtime/jsx-runtime.js ./build/runtime/wrap-jsx.js ./build/runtime/config.js",
     "dev": "tsc -p tsconfig.build.json --watch --preserveWatchOutput",
@@ -33,13 +34,17 @@
     "@native-twin/preset-tailwind": "workspace:*",
     "@native-twin/styled": "workspace:*",
     "jiti": "1.21.0",
-    "micromatch": "4.0.5"
+    "micromatch": "4.0.5",
+    "sucrase": "^3.35.0"
   },
   "devDependencies": {
     "@types/connect": "3.4.38",
     "@types/micromatch": "^4.0.4",
+    "@types/shelljs": "^0",
     "metro-react-native-babel-preset": "^0.77.0",
-    "react-native-safe-area-context": "4.9.0"
+    "proxy-polyfill": "^0.3.2",
+    "react-native-safe-area-context": "4.9.0",
+    "shelljs": "^0.8.5"
   },
   "peerDependencies": {
     "react": ">=18",
