--- a/packages/metro/tsconfig.build.json
+++ b/packages/metro/tsconfig.build.json
@@ -3,6 +3,8 @@
   "compilerOptions": {
     "rootDir": "src",
     "outDir": "build",
+    "module": "CommonJS",
+    "declarationMap": true,
     "noEmit": false,
     "sourceMap": true
   },
