--- a/packages/native-twin/package.json
+++ b/packages/native-twin/package.json
@@ -50,8 +50,8 @@
     "@native-twin/helpers": "workspace:*"
   },
   "peerDependencies": {
-    "react": ">=18.0",
-    "react-native": ">=0.71.0"
+    "react": "*",
+    "react-native": "*"
   },
   "optionalDependencies": {
     "jest": "*"
