--- a/packages/babel/package.json
+++ b/packages/babel/package.json
@@ -33,7 +33,7 @@
     "@babel/types": "^7.24.0",
     "@effect/schema": "^0.66.10",
     "babel-plugin-tester": "^11.0.4",
-    "effect": "3.4.5"
+    "effect": "^3.5.5"
   },
   "devDependencies": {
     "@babel/plugin-syntax-jsx": "^7.23.3",
