--- a/packages/metro/.eslintrc.json
+++ b/packages/metro/.eslintrc.json
@@ -1,7 +1,8 @@
 {
   "extends": "../../.eslintrc.json",
   "ignorePatterns": [
-    "!**/*", "build"
+    "!**/*",
+    "build"
   ],
   "overrides": [
     {
@@ -18,7 +19,8 @@
         "@typescript-eslint/no-empty-interface": "off",
         "@typescript-eslint/no-non-null-assertion": "off",
         "@typescript-eslint/ban-ts-comment": "off",
-        "no-empty": "off"
+        "no-empty": "off",
+        "require-yield": "off"
       }
     }
   ]
