--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@typescript-eslint/parser": "^7.5.0",
     "@welldone-software/why-did-you-render": "^8.0.3",
     "chai": "4.3.7",
+    "chalk": "^5.3.0",
     "concurrently": "^7.6.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
