--- a/packages/metro/package.json
+++ b/packages/metro/package.json
@@ -28,6 +28,8 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@babel/traverse": "^7.24.0",
+    "@babel/types": "^7.24.0",
     "@native-twin/babel": "workspace:*",
     "@native-twin/core": "workspace:*",
     "@native-twin/css": "workspace:*",
@@ -37,12 +39,16 @@
     "effect": "^3.5.5",
     "jiti": "1.21.0",
     "micromatch": "4.0.5",
-    "sucrase": "^3.35.0"
+    "piscina": "^4.6.1",
+    "sucrase": "^3.35.0",
+    "ts-morph": "^23.0.0"
   },
   "devDependencies": {
+    "@babel/helper-module-imports": "^7.22.15",
     "@types/connect": "3.4.38",
     "@types/micromatch": "^4.0.4",
     "@types/shelljs": "^0",
+    "ast-pretty-print": "^2.0.1",
     "metro-react-native-babel-preset": "^0.77.0",
     "proxy-polyfill": "^0.3.2",
     "react-native-safe-area-context": "4.9.0",
