--- a/packages/metro/tsconfig.json
+++ b/packages/metro/tsconfig.json
@@ -5,6 +5,7 @@
       "ESNext",
       "DOM"
     ],
+    "jsx": "react-native",
     "noUncheckedIndexedAccess": false,
     "noPropertyAccessFromIndexSignature": false,
     "noFallthroughCasesInSwitch": false,
@@ -12,5 +13,5 @@
     "allowUnreachableCode": true
   },
   "include": ["src", "types.d.ts"],
-  "exclude": ["build", "babel.config.js", "metro.config.js", "jest.config.js"]
+  "exclude": ["build", "babel.config.js", "metro.config.js", "jest.config.js", "bck"]
 }
