break(metro): metro runtime transformer - RC.0 TS transformer

--- a/packages/metro/.vscode/launch.json
+++ b/packages/metro/.vscode/launch.json
@@ -3,8 +3,7 @@
     {
       "type": "node",
       "request": "launch",
-      "internalConsoleOptions": "neverOpen",
-      "name": "Jest",
+      "name": "Test Metro plugin",
       "program": "../../node_modules/jest/bin/jest",
       "args": [
         "--runInBand",
@@ -12,7 +11,7 @@
         "--watch"
       ],
       "autoAttachChildProcesses": true,
-      "console": "internalConsole",
+      "console": "integratedTerminal",
       "resolveSourceMapLocations": [
         "${workspaceFolder}/**",
         "!**/node_modules/**"
