--- a/packages/metro/.eslintrc.json
+++ b/packages/metro/.eslintrc.json
@@ -2,6 +2,7 @@
   "extends": "../../.eslintrc.json",
   "ignorePatterns": [
     "!**/*",
+    "test/fixtures/*",
     "build",
     "bck"
   ],
@@ -16,6 +17,7 @@
       "rules": {
         "@typescript-eslint/no-unused-vars": "off",
         "@typescript-eslint/no-explicit-any": "off",
+        "no-undef": "off",
         "@typescript-eslint/no-var-requires": "off",
         "@typescript-eslint/no-empty-interface": "off",
         "@typescript-eslint/no-non-null-assertion": "off",
