--- a/packages/metro/package.json
+++ b/packages/metro/package.json
@@ -36,10 +36,11 @@
     "@native-twin/helpers": "workspace:*",
     "@native-twin/preset-tailwind": "workspace:*",
     "@native-twin/styled": "workspace:*",
+    "@ts-morph/common": "^0.24.0",
+    "code-block-writer": "^13.0.1",
     "effect": "^3.5.5",
     "jiti": "1.21.0",
     "micromatch": "4.0.5",
-    "piscina": "^4.6.1",
     "sucrase": "^3.35.0",
     "ts-morph": "^23.0.0"
   },
@@ -51,12 +52,12 @@
     "ast-pretty-print": "^2.0.1",
     "metro-react-native-babel-preset": "^0.77.0",
     "proxy-polyfill": "^0.3.2",
-    "react-native-safe-area-context": "4.9.0",
     "shelljs": "^0.8.5"
   },
   "peerDependencies": {
     "react": ">=18",
-    "react-native": "*"
+    "react-native": "*",
+    "react-native-safe-area-context": "*"
   },
   "optionalDependencies": {
     "jest": "*"
