--- a/packages/metro/.eslintrc.json
+++ b/packages/metro/.eslintrc.json
@@ -15,6 +15,7 @@
         "plugin:@nx/typescript"
       ],
       "rules": {
+        "no-var": "off",
         "@typescript-eslint/no-unused-vars": "off",
         "@typescript-eslint/no-explicit-any": "off",
         "no-undef": "off",
