--- a/packages/metro/tsconfig.json
+++ b/packages/metro/tsconfig.json
@@ -7,10 +7,7 @@
     ],
     "jsx": "react-native",
     "noUncheckedIndexedAccess": false,
-    "noPropertyAccessFromIndexSignature": false,
-    "noFallthroughCasesInSwitch": false,
-    "noImplicitReturns": false,
-    "allowUnreachableCode": true
+    "noPropertyAccessFromIndexSignature": false
   },
   "include": ["src", "types.d.ts"],
   "exclude": ["build", "babel.config.js", "metro.config.js", "jest.config.js", "bck"]
