break(metro): clean code

--- a/packages/babel/tsconfig.build.json
+++ b/packages/babel/tsconfig.build.json
@@ -9,5 +9,6 @@
     "noEmit": false,
     "noEmitOnError": false
   },
-  "exclude": ["./test/"]
+  "include": ["src"],
+  "exclude": ["./test", "bck"]
 }
