fix(metro): ts compiler stable rc.0

--- a/apps/expo-app/package.json
+++ b/apps/expo-app/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@native-twin/babel": "workspace:*",
     "@native-twin/core": "workspace:*",
+    "@native-twin/dev-tools": "workspace:*",
     "@native-twin/jsx": "workspace:*",
     "@native-twin/metro": "workspace:*",
     "@native-twin/preset-tailwind": "workspace:*",
