--- a/packages/metro/.eslintrc.json
+++ b/packages/metro/.eslintrc.json
@@ -16,6 +16,7 @@
       ],
       "rules": {
         "no-var": "off",
+        "@typescript-eslint/no-this-alias": "off",
         "@typescript-eslint/no-unused-vars": "off",
         "@typescript-eslint/no-explicit-any": "off",
         "no-undef": "off",
@@ -23,7 +24,6 @@
         "@typescript-eslint/no-empty-interface": "off",
         "@typescript-eslint/no-non-null-assertion": "off",
         "@typescript-eslint/ban-ts-comment": "off",
-        "@typescript-eslint/consistent-type-imports": "error",
         "no-empty": "off",
         "require-yield": "off"
       }
