--- a/packages/babel/tsconfig.build.json
+++ b/packages/babel/tsconfig.build.json
@@ -10,5 +10,5 @@
     "noEmitOnError": false
   },
   "include": ["src"],
-  "exclude": ["./test", "bck"]
+  "exclude": ["./test", "bck", "build"]
 }
