--- a/packages/babel/tsconfig.json
+++ b/packages/babel/tsconfig.json
@@ -6,6 +6,6 @@
     "resolveJsonModule": false,
     "strict": true
   },
-  "include": ["src", "test", "./*.d.ts"],
+  "include": ["src", "test"],
   "exclude": ["build", "babel.config.js", "bck", "metro.config.js", "jest.config.js"]
 }
