fix(metro): ts compiler stable rc.0.1

--- a/packages/metro/tsconfig.build.json
+++ b/packages/metro/tsconfig.build.json
@@ -8,5 +8,5 @@
     "noEmit": false,
     "sourceMap": true
   },
-  "exclude": ["./src/__tests__/", "build"]
+  "exclude": ["./src/__tests__/", "build", "test"]
 }
