--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -11,10 +11,10 @@
       "@native-twin/nextjs",
       "@native-twin/preset-tailwind",
       "@native-twin/arc-parser",
-      "@native-twin/ts-plugin",
       "@native-twin/jsx",
       "@native-twin/babel",
       "@native-twin/metro",
+      "@native-twin/dev-tools",
       "@native-twin/language-server",
       "@native-twin/language-service"
     ]
