--- a/packages/metro/tsconfig.json
+++ b/packages/metro/tsconfig.json
@@ -1,14 +1,12 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "lib": [
-      "ESNext",
-      "DOM"
-    ],
+    "lib": ["ESNext", "DOM"],
     "jsx": "react-native",
+    "noEmit": true,
     "noUncheckedIndexedAccess": false,
     "noPropertyAccessFromIndexSignature": false
   },
-  "include": ["src", "types.d.ts"],
+  "include": ["src", "types.d.ts", "test"],
   "exclude": ["build", "babel.config.js", "metro.config.js", "jest.config.js", "bck"]
 }
