--- a/packages/metro/.vscode/launch.json
+++ b/packages/metro/.vscode/launch.json
@@ -7,8 +7,7 @@
       "program": "../../node_modules/jest/bin/jest",
       "args": [
         "--runInBand",
-        "--silent=false",
-        "--watch"
+        "--silent=false"
       ],
       "autoAttachChildProcesses": true,
       "console": "integratedTerminal",
