break(jsx): jsx runtime from bundler

--- a/packages/css/package.json
+++ b/packages/css/package.json
@@ -41,8 +41,10 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@effect/typeclass": "^0.25.0",
     "@native-twin/arc-parser": "workspace:*",
-    "@native-twin/helpers": "workspace:*"
+    "@native-twin/helpers": "workspace:*",
+    "effect": "^3.6.0"
   },
   "optionalDependencies": {
     "jest": "*"
