--- a/packages/builder/package.json
+++ b/packages/builder/package.json
@@ -30,8 +30,8 @@
     "@effect/printer": "0.32.1",
     "@effect/printer-ansi": "0.32.25",
     "@effect/schema": "^0.66.10",
-    "@effect/typeclass": "0.23.16",
-    "effect": "^3.5.5",
+    "@effect/typeclass": "^0.25.0",
+    "effect": "^3.6.0",
     "esbuild": "^0.20.2",
     "fs-extra": "11.2.0",
     "minimist": "^1.2.8"
