--- a/packages/css/.eslintrc.json
+++ b/packages/css/.eslintrc.json
@@ -10,7 +10,9 @@
         "plugin:@nx/typescript"
       ],
       "rules": {
+        "@typescript-eslint/no-empty-interface": "off",
         "@typescript-eslint/no-explicit-any": "off",
+        "@typescript-eslint/no-unused-vars": "off",
         "@typescript-eslint/no-non-null-assertion": "off",
         "@typescript-eslint/no-empty-function": "off",
         "no-var": "off"
