--- a/packages/jsx/.eslintrc.json
+++ b/packages/jsx/.eslintrc.json
@@ -18,7 +18,9 @@
         "no-fallthrough": "off",
         "react-hooks/rules-of-hooks": "off",
         "no-case-declarations": "off",
-        "no-console": "off",
+        "no-console": ["error", {
+          "allow": ["warn", "debug"]
+        }],
         "no-unsafe-optional-chaining": "off",
         "no-empty": "off",
         "react/jsx-key": "off",
