--- a/packages/metro/package.json
+++ b/packages/metro/package.json
@@ -32,8 +32,9 @@
     "@native-twin/css": "workspace:*",
     "@native-twin/helpers": "workspace:*",
     "code-block-writer": "^13.0.1",
-    "effect": "^3.5.5",
+    "effect": "^3.6.0",
     "jiti": "1.21.0",
+    "recast": "^0.23.9",
     "sucrase": "^3.35.0",
     "ts-morph": "^23.0.0"
   },
