break(metro): compiled sheet entries included

--- a/packages/css/tsconfig.json
+++ b/packages/css/tsconfig.json
@@ -4,7 +4,6 @@
     "allowSyntheticDefaultImports": true,
     "declarationMap": false,
     "strictFunctionTypes": false,
-    "noImplicitAny": true,
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "module": "CommonJS",
     "moduleResolution": "node",
@@ -12,6 +11,6 @@
     "strict": true,
     "target": "esnext"
   },
-  "include": ["src", "test", "./*.d.ts"],
-  "exclude": ["build", "babel.config.js", "metro.config.js", "jest.config.js"]
+  "include": ["src", "test"],
+  "exclude": ["build", "babel.config.js", "jest.config.js"]
 }
