--- a/packages/css/package.json
+++ b/packages/css/package.json
@@ -41,6 +41,7 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@effect/typeclass": "^0.25.1",
     "@native-twin/arc-parser": "workspace:*",
     "@native-twin/helpers": "workspace:*",
     "effect": "^3.6.0"
