--- a/packages/metro/tsconfig.json
+++ b/packages/metro/tsconfig.json
@@ -7,6 +7,6 @@
     "noUncheckedIndexedAccess": false,
     "noPropertyAccessFromIndexSignature": false
   },
-  "include": ["src", "types.d.ts", "test"],
+  "include": ["src", "types.d.ts", "test", "test/node_modules/.cache/native-twin/twin.styles.js"],
   "exclude": ["build", "babel.config.js", "metro.config.js", "jest.config.js", "bck"]
 }
