--- a/packages/metro/tsconfig.build.json
+++ b/packages/metro/tsconfig.build.json
@@ -8,5 +8,5 @@
     "noEmit": false,
     "sourceMap": true
   },
-  "exclude": ["./src/__tests__/", "build", "test"]
+  "exclude": ["./src/__tests__/", "build", "test", "bck"]
 }
