--- a/packages/metro/tsconfig.build.json
+++ b/packages/metro/tsconfig.build.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "rootDir": "src",
     "outDir": "build",
-    "module": "CommonJS",
+    "module": "NodeNext",
     "declarationMap": true,
     "noEmit": false,
     "sourceMap": true
