--- a/packages/builder/package.json
+++ b/packages/builder/package.json
@@ -24,14 +24,11 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@effect/cli": "0.35.25",
-    "@effect/platform": "^0.61.5",
-    "@effect/platform-node": "^0.56.6",
-    "@effect/printer": "0.32.1",
-    "@effect/printer-ansi": "0.32.25",
-    "@effect/schema": "^0.66.10",
-    "@effect/typeclass": "^0.25.1",
-    "effect": "^3.6.0",
+    "@effect/cli": "^0.40.6",
+    "@effect/platform": "^0.61.6",
+    "@effect/platform-node": "^0.56.7",
+    "@effect/schema": "^0.70.3",
+    "effect": "^3.6.2",
     "esbuild": "^0.20.2",
     "fs-extra": "11.2.0",
     "minimist": "^1.2.8"
