--- a/packages/metro/package.json
+++ b/packages/metro/package.json
@@ -23,18 +23,20 @@
     "cloc": "yarn run build && npx cloc --by-file --exclude-ext=d.ts ./build/runtime/native ./build/runtime/api.native.js ./build/runtime/observable.js ./build/runtime/jsx-runtime.js ./build/runtime/wrap-jsx.js ./build/runtime/config.js",
     "dev": "tsc -p tsconfig.build.json --watch --preserveWatchOutput",
     "lint": "eslint \"./**/*.{ts,tsx}\"",
-    "test": "jest",
-    "test:debug": "node --inspect-brk ../../node_modules/.bin/jest --runInBand",
+    "test": "jest --detectOpenHandles=true",
+    "test:debug": "node --inspect-brk ../../node_modules/.bin/jest --runInBand=true --detectOpenHandles=true",
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@effect/platform": "^0.61.5",
-    "@effect/platform-node": "^0.56.6",
+    "@effect/experimental": "^0.22.4",
+    "@effect/platform": "^0.61.6",
+    "@effect/platform-node": "^0.56.7",
     "@native-twin/core": "workspace:*",
     "@native-twin/css": "workspace:*",
     "@native-twin/helpers": "workspace:*",
     "code-block-writer": "^13.0.1",
-    "effect": "^3.6.0",
+    "effect": "^3.6.2",
+    "fast-check": "^3.21.0",
     "jiti": "1.21.0",
     "recast": "^0.23.9",
     "sucrase": "^3.35.0",
