--- a/packages/babel/.eslintrc.json
+++ b/packages/babel/.eslintrc.json
@@ -12,6 +12,7 @@
         "plugin:@nx/typescript"
       ],
       "rules": {
+        "@typescript-eslint/ban-ts-comment": "off",
         "prefer-const": "off",
         "@typescript-eslint/no-non-null-assertion": "off",
         "require-yield": "off",
