--- a/packages/jsx/package.json
+++ b/packages/jsx/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@native-twin/core": "workspace:*",
     "@native-twin/css": "workspace:*",
+    "@native-twin/dev-tools": "workspace:*",
     "@native-twin/helpers": "workspace:*",
     "@native-twin/preset-tailwind": "workspace:*"
   },
