--- a/turbo.json
+++ b/turbo.json
@@ -8,7 +8,8 @@
       ],
       "inputs": ["$TURBO_DEFAULT$","!**/test","!**/tests"],
       "outputs": [
-        "build/**"
+        "build/**",
+        "dist/**"
       ]
     },
     "mobile:dev": {
