--- a/apps/expo-app/package.json
+++ b/apps/expo-app/package.json
@@ -18,14 +18,14 @@
     "@native-twin/metro": "workspace:*",
     "@native-twin/preset-tailwind": "workspace:*",
     "@native-twin/styled": "workspace:*",
-    "expo": "^51.0.17",
-    "expo-build-properties": "~0.12.3",
-    "expo-font": "~12.0.7",
-    "expo-image": "~1.12.12",
+    "expo": "^51.0.28",
+    "expo-build-properties": "~0.12.5",
+    "expo-font": "~12.0.9",
+    "expo-image": "~1.12.13",
     "expo-status-bar": "~1.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-native": "0.74.2",
+    "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-pager-view": "6.3.0",
     "react-native-reanimated": "~3.10.1",
@@ -37,7 +37,6 @@
   "devDependencies": {
     "@types/react": "~18.2.79",
     "@types/react-dom": "~18.2.25",
-    "sharp-cli": "2.1.0",
-    "typescript": "^5.5.4"
+    "sharp-cli": "2.1.0"
   }
 }
