--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Cristhian Gutierrez",
   "workspaces": [
     "packages/*",
+    "packages/dev-tools/webui",
     "apps/*"
   ],
   "scripts": {
