--- a/package.json
+++ b/package.json
@@ -28,9 +28,14 @@
     "release": "yarn build:release && changeset publish",
     "test": "turbo run test"
   },
+  "resolutions": {
+    "metro-runtime@npm:0.80.6": "patch:metro-runtime@npm%3A0.80.6#~/.yarn/patches/metro-runtime-npm-0.80.6-782603c97d.patch",
+    "metro-runtime@npm:^0.80.3": "patch:metro-runtime@npm%3A0.80.6#~/.yarn/patches/metro-runtime-npm-0.80.6-782603c97d.patch"
+  },
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.27.1",
+    "@effect/experimental": "^0.23.3",
     "@nx/eslint": "18.2.2",
     "@nx/eslint-plugin": "18.2.2",
     "@testing-library/react-native": "^12.0.1",
@@ -65,16 +70,12 @@
     "rimraf": "^5.0.7",
     "ts-node": "^10.9.2",
     "tslib": "^2.6.3",
-    "turbo": "^2.0.12",
+    "turbo": "^2.0.14",
     "typescript": "^5.5.4"
   },
   "packageManager": "yarn@4.2.2",
   "overrides": {
     "@babel/types": "7.23.9",
     "@babel/core": "7.23.9"
-  },
-  "resolutions": {
-    "metro-runtime@npm:^0.80.3": "patch:metro-runtime@npm%3A0.80.6#~/.yarn/patches/metro-runtime-npm-0.80.6-782603c97d.patch",
-    "metro-runtime@npm:0.80.6": "patch:metro-runtime@npm%3A0.80.6#~/.yarn/patches/metro-runtime-npm-0.80.6-782603c97d.patch"
   }
 }
