feat(compiler): Compile just parent Nodes

--- a/packages/metro/.vscode/launch.json
+++ b/packages/metro/.vscode/launch.json
@@ -20,6 +20,7 @@
       "resolveSourceMapLocations": [
         "${workspaceFolder}/**",
         "${workspaceFolder}/../**",
+        "${workspaceFolder}/../babel/**/*",
         "!**/node_modules/**"
       ],
       "sourceMaps": true,
