--- a/packages/metro/package.json
+++ b/packages/metro/package.json
@@ -28,7 +28,6 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@effect/experimental": "^0.22.4",
     "@effect/platform": "^0.61.6",
     "@effect/platform-node": "^0.56.7",
     "@native-twin/core": "workspace:*",
@@ -39,6 +38,7 @@
     "fast-check": "^3.21.0",
     "jiti": "1.21.0",
     "recast": "^0.23.9",
+    "socket.io-client": "^4.7.5",
     "sucrase": "^3.35.0"
   },
   "devDependencies": {
