--- a/packages/helpers/.eslintrc.json
+++ b/packages/helpers/.eslintrc.json
@@ -11,6 +11,7 @@
       ],
       "rules": {
         "no-var": "off",
+        "@typescript-eslint/no-this-alias": "off",
         "@typescript-eslint/no-empty-function": "off",
         "@typescript-eslint/no-explicit-any": "off"
       }
