--- a/packages/metro/package.json
+++ b/packages/metro/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@effect/platform": "^0.61.6",
     "@effect/platform-node": "^0.56.7",
+    "@native-twin/babel": "workspace:*",
     "@native-twin/core": "workspace:*",
     "@native-twin/css": "workspace:*",
     "@native-twin/helpers": "workspace:*",
