--- a/packages/native-twin/tsconfig.json
+++ b/packages/native-twin/tsconfig.json
@@ -6,6 +6,7 @@
     "module": "ESNext",
     "noUnusedLocals": false,
     "strictFunctionTypes": false,
+    "noPropertyAccessFromIndexSignature": true,
     "strictNullChecks": true,
     "noImplicitReturns": false,
     "resolveJsonModule": true,
