--- a/apps/expo-app/package.json
+++ b/apps/expo-app/package.json
@@ -32,6 +32,7 @@
     "react-native-svg": "15.2.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-uuid": "^2.0.1",
+    "react-native-view-shot": "3.8.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
