--- a/packages/metro/package.json
+++ b/packages/metro/package.json
@@ -35,6 +35,7 @@
     "@native-twin/css": "workspace:*",
     "@native-twin/helpers": "workspace:*",
     "code-block-writer": "^13.0.1",
+    "css-tree": "^2.3.1",
     "effect": "^3.6.7",
     "fast-check": "^3.21.0",
     "jiti": "1.21.0",
@@ -48,6 +49,7 @@
     "@native-twin/preset-tailwind": "workspace:*",
     "@native-twin/styled": "workspace:*",
     "@types/connect": "3.4.38",
+    "@types/css-tree": "^2.3.8",
     "@types/micromatch": "^4.0.4",
     "@types/shelljs": "^0",
     "ast-pretty-print": "^2.0.1",
