--- a/packages/metro/package.json
+++ b/packages/metro/package.json
@@ -28,15 +28,18 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@effect/platform": "^0.61.6",
-    "@effect/platform-node": "^0.56.7",
+    "@effect/platform": "^0.63.0",
+    "@effect/platform-node": "^0.58.0",
+    "@effect/platform-node-shared": "^0.13.0",
+    "@effect/schema": "^0.72.0",
     "@native-twin/babel": "workspace:*",
     "@native-twin/core": "workspace:*",
     "@native-twin/css": "workspace:*",
     "@native-twin/helpers": "workspace:*",
+    "@native-twin/language-service": "workspace:*",
     "code-block-writer": "^13.0.1",
     "css-tree": "^2.3.1",
-    "effect": "^3.6.7",
+    "effect": "^3.7.0",
     "fast-check": "^3.21.0",
     "jiti": "1.21.0",
     "recast": "^0.23.9",
