--- a/packages/metro/package.json
+++ b/packages/metro/package.json
@@ -28,10 +28,12 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@effect/platform": "^0.63.0",
-    "@effect/platform-node": "^0.58.0",
-    "@effect/platform-node-shared": "^0.13.0",
-    "@effect/schema": "^0.72.0",
+    "@effect/cli": "^0.42.3",
+    "@effect/platform": "^0.63.3",
+    "@effect/platform-node": "^0.58.3",
+    "@effect/platform-node-shared": "^0.13.3",
+    "@effect/printer-ansi": "^0.35.2",
+    "@effect/schema": "^0.72.2",
     "@native-twin/babel": "workspace:*",
     "@native-twin/core": "workspace:*",
     "@native-twin/css": "workspace:*",
@@ -39,7 +41,7 @@
     "@native-twin/language-service": "workspace:*",
     "code-block-writer": "^13.0.1",
     "css-tree": "^2.3.1",
-    "effect": "^3.7.0",
+    "effect": "^3.7.2",
     "fast-check": "^3.21.0",
     "jiti": "1.21.0",
     "recast": "^0.23.9",
