--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "native-twin",
   "version": "0.0.0-development",
   "private": true,
+  "homepage": "https://github.com/react-universal/native-twin#readme",
   "repository": {
     "type": "git",
     "url": "https://github.com/react-universal/native-twin.git"
@@ -17,6 +18,7 @@
     "build": "turbo run build",
     "build:release": "yarn build && yarn libs:foreach pack && yarn libs:foreach exec \"mkdir _release && tar zxvf package.tgz --directory _release && rm package.tgz\"",
     "build:watch": "turbo run build:watch --concurrency 14",
+    "docgen": "yarn libs:foreach docgen && node ./scripts/docs.mjs",
     "docs:build": "turbo run docs:build",
     "example:expo": "yarn workspace expo-app run start",
     "extension:dev": "turbo run vscode:dev",
@@ -34,6 +36,7 @@
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.27.1",
+    "@effect/docgen": "^0.4.4",
     "@effect/experimental": "^0.23.3",
     "@nx/eslint": "18.2.2",
     "@nx/eslint-plugin": "18.2.2",
