--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -21,6 +21,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install dependencies
         uses: ./.github/actions/setup
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       - run: yarn docgen
       - name: Build pages Jekyll
         if: github.repository_owner == 'native-twin' && github.event_name == 'push' && github.ref == 'refs/heads/main'
