--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build": "turbo run build",
     "build:release": "yarn build && yarn libs:foreach pack && yarn libs:foreach exec \"mkdir _release && tar zxvf package.tgz --directory _release && rm package.tgz\"",
     "build:watch": "turbo run build:watch --concurrency 14",
-    "docgen": "yarn libs:foreach docgen && node ./scripts/docs.mjs",
+    "docgen": "yarn libs:foreach run docgen && node ./scripts/docs.mjs",
     "docs:build": "turbo run docs:build",
     "example:expo": "yarn workspace expo-app run start",
     "extension:dev": "turbo run vscode:dev",
