--- a/packages/css/package.json
+++ b/packages/css/package.json
@@ -35,6 +35,7 @@
     "build:watch": "tsc -p tsconfig.build.json -w",
     "clean": "rm -rf build",
     "dev": "tsc -p tsconfig.build.json --watch --preserveWatchOutput",
+    "docgen": "docgen",
     "lint": "eslint \"./**/*.{ts,tsx}\"",
     "test": "jest",
     "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand",
