--- a/packages/metro/package.json
+++ b/packages/metro/package.json
@@ -39,6 +39,7 @@
     "@native-twin/css": "workspace:*",
     "@native-twin/helpers": "workspace:*",
     "@native-twin/language-service": "workspace:*",
+    "chalk": "^4.1.2",
     "code-block-writer": "^13.0.1",
     "css-tree": "^2.3.1",
     "effect": "^3.7.2",
@@ -54,6 +55,7 @@
     "@babel/types": "^7.24.0",
     "@native-twin/preset-tailwind": "workspace:*",
     "@native-twin/styled": "workspace:*",
+    "@types/chalk": "^2.2.0",
     "@types/connect": "3.4.38",
     "@types/css-tree": "^2.3.8",
     "@types/micromatch": "^4.0.4",
