--- a/sites/twin.run/package.json
+++ b/sites/twin.run/package.json
@@ -10,32 +10,34 @@
     "preview": "vite preview",
     "server": "node --loader ts-node/esm src/server/direct.ts"
   },
+  "resolutions": {
+    "@babel/traverse@npm:^7.24.7": "patch:@babel/traverse@npm%3A7.24.7#~/.yarn/patches/@babel-traverse-npm-7.24.7-b26422bd59.patch"
+  },
   "dependencies": {
     "@codingame/esbuild-import-meta-url-plugin": "^1.0.2",
+    "@codingame/eslint-config": "^1.2.1",
     "@codingame/monaco-vscode-api": "5.2.0",
     "@codingame/monaco-vscode-editor-api": "5.2.0",
+    "@codingame/monaco-vscode-explorer-service-override": "5.2.0",
     "@codingame/monaco-vscode-lifecycle-service-override": "5.2.0",
     "@codingame/monaco-vscode-npm-default-extension": "5.2.0",
-    "@codingame/monaco-vscode-rollup-vsix-plugin": "^6.0.1",
     "@codingame/monaco-vscode-standalone-languages": "5.2.0",
     "@codingame/monaco-vscode-standalone-typescript-language-features": "5.2.0",
     "@codingame/monaco-vscode-typescript-basics-default-extension": "5.2.0",
     "@codingame/monaco-vscode-typescript-language-features-default-extension": "5.2.0",
-    "@native-twin/core": "^6.1.0",
-    "@native-twin/css": "^6.1.0",
+    "@codingame/monaco-vscode-views-service-override": "5.2.0",
+    "@native-twin/core": "^6.4.0",
+    "@native-twin/css": "^6.4.0",
+    "@native-twin/helpers": "file:../../packages/helpers",
     "@native-twin/language-service": "file:../../packages/language-service",
-    "@native-twin/preset-tailwind": "^6.1.0",
+    "@native-twin/preset-tailwind": "^6.4.0",
     "@rollup/browser": "^4.18.0",
-    "effect": "~3.3.0",
-    "esbuild-plugin-wasm": "^1.1.0",
-    "jiti": "^1.21.3",
+    "effect": "^3.7.2",
     "monaco-editor": "npm:@codingame/monaco-vscode-editor-api@~5.2.0",
     "monaco-editor-wrapper": "5.2.0",
     "monaco-languageclient": "^8.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "sucrase": "^3.35.0",
-    "systemjs": "^6.15.1",
     "vscode": "npm:@codingame/monaco-vscode-api@~5.2.0",
     "vscode-json-languageservice": "^5.3.11",
     "vscode-languageclient": "~9.0.1",
@@ -47,7 +49,9 @@
   },
   "devDependencies": {
     "@chialab/esbuild-plugin-meta-url": "^0.18.2",
+    "@codingame/monaco-vscode-rollup-vsix-plugin": "^6.0.1",
     "@entur/vite-plugin-assets-json": "^0.0.9",
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@rollup/pluginutils": "^5.1.0",
     "@types/express": "^4",
     "@types/react": "^18",
@@ -55,6 +59,7 @@
     "@types/systemjs": "^6",
     "@types/vscode": "^1.89.0",
     "@types/ws": "^8",
+    "esbuild-plugin-wasm": "^1.1.0",
     "eslint": "^8.57.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.29.1",
@@ -66,8 +71,9 @@
     "request-light": "^0.7.0",
     "ts-node": "^10.9.2",
     "tslib": "^2.6.3",
-    "typescript": "^5.4.2",
+    "typescript": "^5.5.4",
     "vite": "^5.3.1",
+    "vite-plugin-prebundle-workers": "^0.2.0",
     "ws": "^8.17.0"
   },
   "packageManager": "yarn@4.2.2"
