--- a/sites/native-twin-docs/package.json
+++ b/sites/native-twin-docs/package.json
@@ -17,6 +17,7 @@
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "react-syntax-highlighter": "^15.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
@@ -29,7 +30,6 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.7",
     "postcss": "^8",
-    
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
