--- a/sites/twin.run/package.json
+++ b/sites/twin.run/package.json
@@ -11,69 +11,89 @@
     "server": "node --loader ts-node/esm src/server/direct.ts"
   },
   "resolutions": {
-    "@babel/traverse@npm:^7.24.7": "patch:@babel/traverse@npm%3A7.24.7#~/.yarn/patches/@babel-traverse-npm-7.24.7-b26422bd59.patch"
+    "@babel/traverse@npm:^7.16.0": "patch:@babel/traverse@npm%3A7.25.6#~/.yarn/patches/@babel-traverse-npm-7.25.6-1b9e2a314c.patch",
+    "@babel/traverse@npm:^7.24.7": "patch:@babel/traverse@npm%3A7.25.6#~/.yarn/patches/@babel-traverse-npm-7.25.6-1b9e2a314c.patch",
+    "@babel/traverse@npm:^7.24.8": "patch:@babel/traverse@npm%3A7.25.6#~/.yarn/patches/@babel-traverse-npm-7.25.6-1b9e2a314c.patch",
+    "@babel/traverse@npm:^7.25.0": "patch:@babel/traverse@npm%3A7.25.6#~/.yarn/patches/@babel-traverse-npm-7.25.6-1b9e2a314c.patch",
+    "@babel/traverse@npm:^7.25.1": "patch:@babel/traverse@npm%3A7.25.6#~/.yarn/patches/@babel-traverse-npm-7.25.6-1b9e2a314c.patch",
+    "@babel/traverse@npm:^7.25.2": "patch:@babel/traverse@npm%3A7.25.6#~/.yarn/patches/@babel-traverse-npm-7.25.6-1b9e2a314c.patch",
+    "@babel/traverse@npm:^7.25.3": "patch:@babel/traverse@npm%3A7.25.6#~/.yarn/patches/@babel-traverse-npm-7.25.6-1b9e2a314c.patch",
+    "@babel/traverse@npm:^7.25.4": "patch:@babel/traverse@npm%3A7.25.6#~/.yarn/patches/@babel-traverse-npm-7.25.6-1b9e2a314c.patch",
+    "esbuild": "0.23.1"
   },
   "dependencies": {
-    "@codingame/esbuild-import-meta-url-plugin": "^1.0.2",
-    "@codingame/eslint-config": "^1.2.1",
-    "@codingame/monaco-vscode-api": "5.2.0",
-    "@codingame/monaco-vscode-editor-api": "5.2.0",
-    "@codingame/monaco-vscode-explorer-service-override": "5.2.0",
-    "@codingame/monaco-vscode-lifecycle-service-override": "5.2.0",
-    "@codingame/monaco-vscode-npm-default-extension": "5.2.0",
-    "@codingame/monaco-vscode-standalone-languages": "5.2.0",
-    "@codingame/monaco-vscode-standalone-typescript-language-features": "5.2.0",
-    "@codingame/monaco-vscode-typescript-basics-default-extension": "5.2.0",
-    "@codingame/monaco-vscode-typescript-language-features-default-extension": "5.2.0",
-    "@codingame/monaco-vscode-views-service-override": "5.2.0",
+    "@codingame/monaco-vscode-api": "~8.0.4",
+    "@codingame/monaco-vscode-editor-api": "~8.0.4",
+    "@codingame/monaco-vscode-explorer-service-override": "~8.0.4",
+    "@codingame/monaco-vscode-language-detection-worker-service-override": "~8.0.4",
+    "@codingame/monaco-vscode-lifecycle-service-override": "~8.0.4",
+    "@codingame/monaco-vscode-npm-default-extension": "~8.0.4",
+    "@codingame/monaco-vscode-standalone-languages": "~8.0.4",
+    "@codingame/monaco-vscode-standalone-typescript-language-features": "~8.0.4",
+    "@codingame/monaco-vscode-typescript-basics-default-extension": "~8.0.4",
+    "@codingame/monaco-vscode-typescript-language-features-default-extension": "~8.0.4",
+    "@codingame/monaco-vscode-views-service-override": "~8.0.4",
     "@native-twin/core": "^6.4.0",
     "@native-twin/css": "^6.4.0",
     "@native-twin/helpers": "file:../../packages/helpers",
     "@native-twin/language-service": "file:../../packages/language-service",
     "@native-twin/preset-tailwind": "^6.4.0",
     "@rollup/browser": "^4.18.0",
+    "@typefox/monaco-editor-react": "^4.5.3",
     "effect": "^3.7.2",
-    "monaco-editor": "npm:@codingame/monaco-vscode-editor-api@~5.2.0",
-    "monaco-editor-wrapper": "5.2.0",
-    "monaco-languageclient": "^8.5.0",
+    "monaco-editor": "npm:@codingame/monaco-vscode-editor-api@^8.0.4",
+    "monaco-editor-wrapper": "~5.5.3",
+    "monaco-languageclient": "~8.8.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "vscode": "npm:@codingame/monaco-vscode-api@~5.2.0",
-    "vscode-json-languageservice": "^5.3.11",
+    "vscode": "npm:@codingame/monaco-vscode-api@~8.0.4",
+    "vscode-json-languageservice": "~5.4.0",
     "vscode-languageclient": "~9.0.1",
-    "vscode-languageserver": "^9.0.1",
-    "vscode-languageserver-protocol": "~3.17.5",
-    "vscode-languageserver-textdocument": "^1.0.11",
+    "vscode-languageserver": "~9.0.1",
     "vscode-uri": "~3.0.8",
-    "vscode-ws-jsonrpc": "~3.3.2"
+    "vscode-ws-jsonrpc": "~3.3.2",
+    "ws": "~8.18.0"
   },
   "devDependencies": {
+    "@babel/traverse": "patch:@babel/traverse@npm%3A7.25.6#~/.yarn/patches/@babel-traverse-npm-7.25.6-1b9e2a314c.patch",
     "@chialab/esbuild-plugin-meta-url": "^0.18.2",
+    "@codingame/esbuild-import-meta-url-plugin": "^1.0.2",
     "@codingame/monaco-vscode-rollup-vsix-plugin": "^6.0.1",
     "@entur/vite-plugin-assets-json": "^0.0.9",
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "@nx/eslint": "18.2.2",
+    "@nx/eslint-plugin": "18.2.2",
     "@rollup/pluginutils": "^5.1.0",
-    "@types/express": "^4",
+    "@types/babel__traverse": "^7",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/systemjs": "^6",
     "@types/vscode": "^1.89.0",
     "@types/ws": "^8",
+    "@typescript-eslint/eslint-plugin": "^7.5.0",
+    "@typescript-eslint/parser": "^7.5.0",
+    "esbuild": "0.23.1",
     "esbuild-plugin-wasm": "^1.1.0",
     "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-n": "^17.8.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-promise": "^6.2.0",
-    "eslint-plugin-unused-imports": "^3.2.0",
+    "eslint-plugin-react": "^7.34.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-unused-imports": "^3.1.0",
     "express": "^4.19.2",
     "prettier": "^3.3.1",
     "request-light": "^0.7.0",
     "ts-node": "^10.9.2",
     "tslib": "^2.6.3",
     "typescript": "^5.5.4",
-    "vite": "^5.3.1",
+    "vite": "^5.4.3",
     "vite-plugin-prebundle-workers": "^0.2.0",
+    "vscode-languageserver-types": "~3.17.5",
     "ws": "^8.17.0"
   },
   "packageManager": "yarn@4.2.2"
