--- a/sites/twin.run/tsconfig.json
+++ b/sites/twin.run/tsconfig.json
@@ -5,7 +5,7 @@
     "module": "ESNext",
     "lib": ["ESNext", "DOM", "WebWorker"],
     "jsx": "react",
-    "moduleResolution": "Bundler",
+    "moduleResolution": "Node",
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "sourceMap": true,
