--- a/sites/twin.run/package.json
+++ b/sites/twin.run/package.json
@@ -33,6 +33,9 @@
     "@codingame/monaco-vscode-typescript-basics-default-extension": "~8.0.4",
     "@codingame/monaco-vscode-typescript-language-features-default-extension": "~8.0.4",
     "@codingame/monaco-vscode-views-service-override": "~8.0.4",
+    "@effect/platform": "^0.64.1",
+    "@effect/platform-browser": "^0.43.1",
+    "@effect/schema": "^0.72.4",
     "@native-twin/core": "^6.4.0",
     "@native-twin/css": "^6.4.0",
     "@native-twin/helpers": "file:../../packages/helpers",
@@ -40,7 +43,7 @@
     "@native-twin/preset-tailwind": "^6.4.0",
     "@rollup/browser": "^4.18.0",
     "@typefox/monaco-editor-react": "^4.5.3",
-    "effect": "^3.7.2",
+    "effect": "^3.7.3",
     "monaco-editor": "npm:@codingame/monaco-vscode-editor-api@^8.0.4",
     "monaco-editor-wrapper": "~5.5.3",
     "monaco-languageclient": "~8.8.3",
@@ -72,6 +75,7 @@
     "@types/ws": "^8",
     "@typescript-eslint/eslint-plugin": "^7.5.0",
     "@typescript-eslint/parser": "^7.5.0",
+    "@vitejs/plugin-react": "^4.3.1",
     "esbuild": "0.23.1",
     "esbuild-plugin-wasm": "^1.1.0",
     "eslint": "^8.57.0",
@@ -85,7 +89,6 @@
     "eslint-plugin-react": "^7.34.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-unused-imports": "^3.1.0",
-    "express": "^4.19.2",
     "prettier": "^3.3.1",
     "request-light": "^0.7.0",
     "ts-node": "^10.9.2",
@@ -93,6 +96,7 @@
     "typescript": "^5.5.4",
     "vite": "^5.4.3",
     "vite-plugin-prebundle-workers": "^0.2.0",
+    "vite-tsconfig-paths": "^5.0.1",
     "vscode-languageserver-types": "~3.17.5",
     "ws": "^8.17.0"
   },
