--- a/sites/twin.run/tsconfig.json
+++ b/sites/twin.run/tsconfig.json
@@ -4,7 +4,7 @@
     "useDefineForClassFields": true,
     "module": "ESNext",
     "lib": ["ESNext", "DOM", "WebWorker"],
-    "jsx": "react",
+    "jsx": "react-jsx",
     "moduleResolution": "Node",
     "strict": true,
     "forceConsistentCasingInFileNames": true,
@@ -18,8 +18,11 @@
     "noImplicitReturns": true,
     "baseUrl": ".",
     "experimentalDecorators": true,
-    "noUncheckedIndexedAccess": true
+    "noUncheckedIndexedAccess": true,
+    "paths": {
+      "@/*": ["src/*"]
+    }
   },
-  "exclude": ["src/content"],
-  "include": ["src", "vite.config.mts"]
+  "exclude": ["src/editor/content"],
+  "include": ["src", "vite.config.ts"]
 }
