--- a/sites/twin.run/.eslintrc.json
+++ b/sites/twin.run/.eslintrc.json
@@ -12,6 +12,7 @@
     "@typescript-eslint/ban-ts-comment": "off",
     "no-restricted-globals": "off",
     "@typescript-eslint/no-inferrable-types": "off",
-    "require-yield": "off"
+    "require-yield": "off",
+    "jsx-a11y/anchor-is-valid": "off"
   }
 }
