feat(sites): Editor LSP adapted

--- a/sites/twin.run/package.json
+++ b/sites/twin.run/package.json
@@ -25,9 +25,14 @@
     "@codingame/monaco-vscode-api": "~8.0.4",
     "@codingame/monaco-vscode-editor-api": "~8.0.4",
     "@codingame/monaco-vscode-explorer-service-override": "~8.0.4",
+    "@codingame/monaco-vscode-html-language-features-default-extension": "~8.0.4",
+    "@codingame/monaco-vscode-json-default-extension": "~8.0.4",
     "@codingame/monaco-vscode-language-detection-worker-service-override": "~8.0.4",
     "@codingame/monaco-vscode-lifecycle-service-override": "~8.0.4",
+    "@codingame/monaco-vscode-markdown-language-features-default-extension": "~8.0.4",
     "@codingame/monaco-vscode-npm-default-extension": "~8.0.4",
+    "@codingame/monaco-vscode-standalone-html-language-features": "~8.0.4",
+    "@codingame/monaco-vscode-standalone-json-language-features": "~8.0.4",
     "@codingame/monaco-vscode-standalone-languages": "~8.0.4",
     "@codingame/monaco-vscode-standalone-typescript-language-features": "~8.0.4",
     "@codingame/monaco-vscode-typescript-basics-default-extension": "~8.0.4",
