--- a/packages/language-service/tsconfig.build.json
+++ b/packages/language-service/tsconfig.build.json
@@ -3,6 +3,8 @@
   "compilerOptions": {
     "rootDir": "src",
     "outDir": "build",
+    "module": "ESNext",
+    "target": "ESNext",
     "noEmit": false,
     "noEmitOnError": false
   },
