--- a/packages/preset-tailwind/tsconfig.build.json
+++ b/packages/preset-tailwind/tsconfig.build.json
@@ -3,6 +3,8 @@
   "compilerOptions": {
     "outDir": "build",
     "rootDir": "src",
+    "module": "ESNext",
+    "target": "ESNext",
     "noEmit": false
   },
   "include": ["src/**/*"],
