--- a/sites/twin.run/.eslintrc.json
+++ b/sites/twin.run/.eslintrc.json
@@ -1,18 +1,32 @@
 {
-  "root": true,
-  "plugins": [
-    "@nx"
+  "extends": "../../.eslintrc.json",
+  "ignorePatterns": [
+    "!**/*"
   ],
-  "extends": [
-    "plugin:@nx/typescript",
-    "plugin:@nx/react"
-  ],
-  "rules": {
-    "@typescript-eslint/no-non-null-assertion": "off",
-    "@typescript-eslint/ban-ts-comment": "off",
-    "no-restricted-globals": "off",
-    "@typescript-eslint/no-inferrable-types": "off",
-    "require-yield": "off",
-    "jsx-a11y/anchor-is-valid": "off"
-  }
+  "overrides": [
+    {
+      "files": [
+        "*.ts",
+        "*.tsx"
+      ],
+      "extends": [
+        "plugin:@nx/typescript",
+        "plugin:@nx/react"
+      ],
+      "rules": {
+        "@typescript-eslint/no-non-null-assertion": "off",
+        "@typescript-eslint/ban-ts-comment": "off",
+        "no-restricted-globals": "off",
+        "@typescript-eslint/no-inferrable-types": "off",
+        "require-yield": "off",
+        "jsx-a11y/anchor-is-valid": "off",
+        "prefer-rest-params": "off",
+        "no-func-assign": "off",
+        "no-var": "off",
+        "prefer-spread": "off",
+        "@typescript-eslint/no-empty-function": "off",
+        "@typescript-eslint/no-explicit-any": "off"
+      }
+    }
+  ]
 }
