--- a/sites/twin.run/tsconfig.json
+++ b/sites/twin.run/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "../../tsconfig.base",
   "compilerOptions": {
     "target": "ESNext",
     "useDefineForClassFields": true,
@@ -24,5 +25,5 @@
     }
   },
   "exclude": ["src/editor/content"],
-  "include": ["src", "vite.config.ts"]
+  "include": ["src", "vite.config.ts", "tailwind.config.ts"]
 }
