--- a/packages/builder/package.json
+++ b/packages/builder/package.json
@@ -25,10 +25,10 @@
   },
   "dependencies": {
     "@effect/cli": "^0.42.3",
-    "@effect/platform": "^0.63.3",
-    "@effect/platform-node": "^0.58.3",
+    "@effect/platform": "^0.64.1",
+    "@effect/platform-node": "^0.59.1",
     "effect": "^3.7.3",
-    "esbuild": "^0.20.2",
+    "esbuild": "0.23.1",
     "fs-extra": "11.2.0",
     "minimist": "^1.2.8"
   },
