--- a/packages/helpers/tsconfig.build.json
+++ b/packages/helpers/tsconfig.build.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "rootDir": "src",
     "outDir": "build",
-    "module": "CommonJS",
+    "module": "ESNext",
+    "target": "ESNext",
     "noEmit": false,
     "declarationMap": true
   },
