--- a/packages/language-service/package.json
+++ b/packages/language-service/package.json
@@ -13,6 +13,7 @@
   },
   "license": "MIT",
   "author": "Cristhian Gutierrez",
+  "type": "commonjs",
   "main": "build/index.js",
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
@@ -26,9 +27,13 @@
   },
   "dependencies": {
     "@ctrl/tinycolor": "^4.1.0",
+    "@native-twin/core": "workspace:*",
+    "@native-twin/css": "workspace:*",
+    "@native-twin/preset-tailwind": "workspace:*",
     "@vscode/emmet-helper": "^2.9.3",
     "cssbeautify": "0.3.1",
     "effect": "^3.7.3",
+    "markdown-it": "^14.1.0",
     "match-sorter": "6.3.4",
     "showdown": "2.1.0",
     "ts-morph": "^23.0.0",
@@ -40,14 +45,12 @@
   },
   "devDependencies": {
     "@types/cssbeautify": "^0.3.5",
+    "@types/markdown-it": "^14.1.2",
     "@types/showdown": "^2.0.6",
     "madge": "7.0.0"
   },
   "optionalDependencies": {
     "jest": "*"
-  },
-  "engines": {
-    "vscode": "^1.89.0"
   },
   "publishConfig": {
     "access": "public",
