--- a/packages/native-twin/tsconfig.build.json
+++ b/packages/native-twin/tsconfig.build.json
@@ -4,7 +4,8 @@
     "outDir": "build",
     "declarationMap": true,
     "verbatimModuleSyntax": false,
-    "module": "CommonJS",
+    "module": "ESNext",
+    "target": "ESNext",
     "noEmit": false,
     "importHelpers": true
   },
