--- a/sites/twin.run/package.json
+++ b/sites/twin.run/package.json
@@ -10,17 +10,6 @@
     "preview": "vite preview",
     "server": "node --loader ts-node/esm src/server/direct.ts"
   },
-  "resolutions": {
-    "@babel/traverse@npm:^7.16.0": "patch:@babel/traverse@npm%3A7.25.6#~/.yarn/patches/@babel-traverse-npm-7.25.6-1b9e2a314c.patch",
-    "@babel/traverse@npm:^7.24.7": "patch:@babel/traverse@npm%3A7.25.6#~/.yarn/patches/@babel-traverse-npm-7.25.6-1b9e2a314c.patch",
-    "@babel/traverse@npm:^7.24.8": "patch:@babel/traverse@npm%3A7.25.6#~/.yarn/patches/@babel-traverse-npm-7.25.6-1b9e2a314c.patch",
-    "@babel/traverse@npm:^7.25.0": "patch:@babel/traverse@npm%3A7.25.6#~/.yarn/patches/@babel-traverse-npm-7.25.6-1b9e2a314c.patch",
-    "@babel/traverse@npm:^7.25.1": "patch:@babel/traverse@npm%3A7.25.6#~/.yarn/patches/@babel-traverse-npm-7.25.6-1b9e2a314c.patch",
-    "@babel/traverse@npm:^7.25.2": "patch:@babel/traverse@npm%3A7.25.6#~/.yarn/patches/@babel-traverse-npm-7.25.6-1b9e2a314c.patch",
-    "@babel/traverse@npm:^7.25.3": "patch:@babel/traverse@npm%3A7.25.6#~/.yarn/patches/@babel-traverse-npm-7.25.6-1b9e2a314c.patch",
-    "@babel/traverse@npm:^7.25.4": "patch:@babel/traverse@npm%3A7.25.6#~/.yarn/patches/@babel-traverse-npm-7.25.6-1b9e2a314c.patch",
-    "esbuild": "0.23.1"
-  },
   "dependencies": {
     "@codingame/monaco-vscode-api": "~8.0.4",
     "@codingame/monaco-vscode-editor-api": "~8.0.4",
@@ -41,19 +30,20 @@
     "@effect/platform": "^0.64.1",
     "@effect/platform-browser": "^0.43.1",
     "@effect/schema": "^0.72.4",
-    "@native-twin/core": "^6.4.0",
-    "@native-twin/css": "^6.4.0",
-    "@native-twin/helpers": "file:../../packages/helpers",
-    "@native-twin/language-service": "file:../../packages/language-service",
-    "@native-twin/preset-tailwind": "^6.4.0",
+    "@native-twin/core": "workspace:*",
+    "@native-twin/css": "workspace:*",
+    "@native-twin/helpers": "workspace:*",
+    "@native-twin/language-service": "workspace:*",
+    "@native-twin/preset-tailwind": "workspace:*",
     "@rollup/browser": "^4.18.0",
     "@typefox/monaco-editor-react": "^4.5.3",
     "effect": "^3.7.3",
     "monaco-editor": "npm:@codingame/monaco-vscode-editor-api@^8.0.4",
     "monaco-editor-wrapper": "~5.5.3",
     "monaco-languageclient": "~8.8.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "vite-plugin-wasm": "^3.3.0",
     "vscode": "npm:@codingame/monaco-vscode-api@~8.0.4",
     "vscode-json-languageservice": "~5.4.0",
     "vscode-languageclient": "~9.0.1",
@@ -63,42 +53,20 @@
     "ws": "~8.18.0"
   },
   "devDependencies": {
-    "@babel/traverse": "patch:@babel/traverse@npm%3A7.25.6#~/.yarn/patches/@babel-traverse-npm-7.25.6-1b9e2a314c.patch",
     "@chialab/esbuild-plugin-meta-url": "^0.18.2",
     "@codingame/esbuild-import-meta-url-plugin": "^1.0.2",
     "@codingame/monaco-vscode-rollup-vsix-plugin": "^6.0.1",
     "@entur/vite-plugin-assets-json": "^0.0.9",
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
-    "@nx/eslint": "18.2.2",
-    "@nx/eslint-plugin": "18.2.2",
     "@rollup/pluginutils": "^5.1.0",
-    "@types/babel__traverse": "^7",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "~18.2.79",
+    "@types/react-dom": "~18.2.25",
     "@types/systemjs": "^6",
     "@types/vscode": "^1.89.0",
     "@types/ws": "^8",
-    "@typescript-eslint/eslint-plugin": "^7.5.0",
-    "@typescript-eslint/parser": "^7.5.0",
     "@vitejs/plugin-react": "^4.3.1",
-    "esbuild": "0.23.1",
     "esbuild-plugin-wasm": "^1.1.0",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-n": "^17.8.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-promise": "^6.2.0",
-    "eslint-plugin-react": "^7.34.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-unused-imports": "^3.1.0",
-    "prettier": "^3.3.1",
     "request-light": "^0.7.0",
-    "ts-node": "^10.9.2",
-    "tslib": "^2.6.3",
-    "typescript": "^5.5.4",
     "vite": "^5.4.3",
     "vite-plugin-prebundle-workers": "^0.2.0",
     "vite-tsconfig-paths": "^5.0.1",
