--- a/sites/twin.run/tsconfig.build.json
+++ b/sites/twin.run/tsconfig.build.json
@@ -1,4 +1,5 @@
 {
+  "extends": "./tsconfig",
   "compilerOptions": {
     "target": "ESNext",
     "useDefineForClassFields": true,
@@ -7,7 +8,6 @@
     "jsx": "react",
     "outDir": "build",
     "rootDir": "src",
-    "moduleResolution": "bundler",
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "sourceMap": true,
@@ -17,7 +17,6 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
-    "baseUrl": ".",
     "experimentalDecorators": true,
     "noUncheckedIndexedAccess": true,
     "paths": {
