--- a/packages/vscode-extension/.eslintrc.json
+++ b/packages/vscode-extension/.eslintrc.json
@@ -17,6 +17,7 @@
         "plugin:@nx/typescript"
       ],
       "rules": {
+        "require-yield": "off",
         "@typescript-eslint/no-explicit-any": "off",
         "@typescript-eslint/no-empty-interface": "off",
         "@typescript-eslint/ban-types": "off",
