--- a/packages/language-server/package.json
+++ b/packages/language-server/package.json
@@ -47,6 +47,7 @@
   "devDependencies": {
     "@types/cssbeautify": "^0.3.5",
     "@types/showdown": "^2.0.6",
+    "esbuild-plugin-d.ts": "^1.3.0",
     "madge": "7.0.0"
   },
   "optionalDependencies": {
