--- a/packages/language-service/package.json
+++ b/packages/language-service/package.json
@@ -13,12 +13,11 @@
   },
   "license": "MIT",
   "author": "Cristhian Gutierrez",
-  "type": "commonjs",
   "main": "build/index.js",
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
     "build:esbuild:watch": "node esbuild.mjs --watch",
-    "build:tsc": "tsc -p tsconfig.build.json",
+    "build:tsc:watch": "tsc -p tsconfig.build.json --watch",
     "build:watch": "tsc -p tsconfig.build.json --watch",
     "clean": "rm -rf build",
     "lint": "eslint . --ext .ts,.tsx",
@@ -47,6 +46,7 @@
     "@types/cssbeautify": "^0.3.5",
     "@types/markdown-it": "^14.1.2",
     "@types/showdown": "^2.0.6",
+    "esbuild-plugin-d.ts": "^1.3.0",
     "madge": "7.0.0"
   },
   "optionalDependencies": {
