--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -115,6 +115,32 @@
           }
         }
       }
+    ],
+    "grammars": [
+      {
+        "language": "Log",
+        "scopeName": "code.log",
+        "path": "./src/syntaxes/log.tmLanguage"
+      }
+    ],
+    "languages": [
+      {
+        "id": "log",
+        "aliases": [
+          "log"
+        ],
+        "extensions": [
+          ".log"
+        ],
+        "configuration": "./log.configuration.json",
+        "mimetypes": [
+          "log",
+          "text/log",
+          "text/x-log",
+          "text/x-code-output",
+          "x-code-output"
+        ]
+      }
     ]
   },
   "activationEvents": [
