--- a/packages/builder/package.json
+++ b/packages/builder/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@babel/generator": "^7.25.6",
     "@chialab/esbuild-rna": "^0.18.2",
+    "@rollup/plugin-typescript": "^12.1.0",
     "@types/fs-extra": "11.0.4",
     "minimist": "^1.2.8",
     "rollup-plugin-preserve-directives": "^0.4.0",
