--- a/apps/expo-router/package.json
+++ b/apps/expo-router/package.json
@@ -2,7 +2,7 @@
   "name": "expo-app-web",
   "version": "1.4.10",
   "private": true,
-  "main": "index.js",
+  "main": "expo-router/entry",
   "scripts": {
     "android": "expo start --android -c",
     "ios": "expo start --ios -c",
@@ -11,6 +11,7 @@
     "start": "expo start -c"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.2.3",
     "@native-twin/babel": "workspace:*",
     "@native-twin/core": "workspace:*",
     "@native-twin/dev-tools": "workspace:*",
@@ -18,10 +19,12 @@
     "@native-twin/metro": "workspace:*",
     "@native-twin/preset-tailwind": "workspace:*",
     "@native-twin/styled": "workspace:*",
-    "expo": "^51.0.28",
+    "expo": "^51.0.37",
     "expo-build-properties": "~0.12.5",
-    "expo-font": "~12.0.9",
-    "expo-image": "~1.12.13",
+    "expo-font": "~12.0.10",
+    "expo-image": "~1.13.0",
+    "expo-linking": "~6.3.1",
+    "expo-router": "~3.5.23",
     "expo-status-bar": "~1.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -29,6 +32,8 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-pager-view": "6.3.0",
     "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-uuid": "^2.0.1",
