--- a/apps/expo-router/tsconfig.json
+++ b/apps/expo-router/tsconfig.json
@@ -2,13 +2,25 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "jsx": "react-native",
-    "lib": ["DOM", "ESNext"],
+    "lib": [
+      "DOM",
+      "ESNext"
+    ],
     "exactOptionalPropertyTypes": false,
     "allowJs": true,
     "moduleResolution": "node",
     "target": "ESNext",
     "noEmit": true
   },
-  "exclude": ["node_modules", ".expo"],
-  "include": ["index.js", "**/*.ts", "**/*.tsx", "**/*.json", "wdyr.js"]
+  "exclude": [
+    "node_modules",
+    ".expo"
+  ],
+  "include": [
+    "index.js",
+    "**/*.ts",
+    "**/*.tsx",
+    "**/*.json",
+    "wdyr.js"
+  ]
 }
