--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "concurrently": "^7.6.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-config-turbo": "^2.1.3",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-prettier": "^5.1.3",
@@ -82,11 +83,10 @@
     "react-test-renderer": "18.2.0",
     "rimraf": "^5.0.7",
     "rollup": "^4.24.0",
-    "rollup-plugin-dts": "^6.1.1",
     "ts-node": "^10.9.2",
     "tslib": "^2.6.3",
     "tsup": "^8.3.0",
-    "turbo": "^2.1.1",
+    "turbo": "^2.1.3",
     "typescript": "^5.5.4"
   },
   "packageManager": "yarn@4.4.1",
