break(modules): fast refresh forced

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,9 @@
         "*.js",
         "*.jsx"
       ],
-      "rules": {}
+      "rules": {
+        "turbo/no-undeclared-env-vars": "off"
+      }
     },
     {
       "files": [
