--- a/packages/css/parser/package.json
+++ b/packages/css/parser/package.json
@@ -1,5 +1,5 @@
 {
-  "main": "../build/cjs/css/parser",
+  "main": "../build/css/parser",
   "module": "../build/esm/css/parser",
   "types": "../build/css/parser/index.d.ts"
 }
