--- a/turbo.json
+++ b/turbo.json
@@ -1,12 +1,15 @@
 {
   "$schema": "https://turbo.build/schema.json",
-  
   "tasks": {
     "build": {
       "dependsOn": [
         "^build"
       ],
-      "inputs": ["$TURBO_DEFAULT$","!**/test","!**/tests"],
+      "inputs": [
+        "$TURBO_DEFAULT$",
+        "!**/test",
+        "!**/tests"
+      ],
       "outputs": [
         "build/**",
         "dist/**"
@@ -16,7 +19,12 @@
       "cache": false,
       "persistent": true,
       "interactive": true,
-      "inputs": ["$TURBO_DEFAULT$","!**/test", "!**/tests", "**/webui/**/*"],
+      "inputs": [
+        "$TURBO_DEFAULT$",
+        "!**/test",
+        "!**/tests",
+        "**/webui/**/*"
+      ],
       "outputs": [
         "build/**",
         "dist/**"
@@ -24,7 +32,9 @@
     },
     "mobile:dev": {
       "cache": false,
-      "dependsOn": ["^build"],
+      "dependsOn": [
+        "^build"
+      ],
       "persistent": true,
       "interactive": true
     },
